# gesture-based-assistant-jetson

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
src/jarvis_gesture/: __init__.py  actions.py  app.py  camera.py  config.py  gestures.py  home_assistant_client.py  task_store.py  voice.py  website_lookup.py
